force-app/main/default/objects/Account/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to manage cascading address changes in flows
Account After Update Address
Contact After Update Address</description>
    <label>Account Address</label>
    <type>Checkbox</type>
</CustomField>