force-app/main/default/objects/Account/fields/Accts__c.field-meta.xml
<CustomField>
    <fullName>Accts__c</fullName>
    <description>Used in reporting to calculate the number of Accounts.  Does NOT need to be on Page Layouts, but DOES need to be &quot;Visible&quot; to users</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Accts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>