force-app/main/default/objects/Account/fields/ACTID__c.field-meta.xml
<CustomField>
    <fullName>ACTID__c</fullName>
    <description>ACT! External ID</description>
    <externalId>true</externalId>
    <label>ACTID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>