force-app/main/default/objects/Account/fields/Address_Before_Merge__c.field-meta.xml
<CustomField>
    <fullName>Address_Before_Merge__c</fullName>
    <description>If a duplicate Account had more than one address, additional addresses were captured here to prevent data loss.</description>
    <inlineHelpText>This field captured all addresses when duplicate accounts where merged.</inlineHelpText>
    <label>Address Before Merge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>