force-app/main/default/objects/Account/fields/Amount_Ask__c.field-meta.xml
<CustomField>
    <fullName>Amount_Ask__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you asked a donor for a specific amount of money toward a match.</inlineHelpText>
    <label>Amount Ask</label>
    <type>Checkbox</type>
</CustomField>