force-app/main/default/objects/Account/fields/Billing_Carrier_Route__c.field-meta.xml
<CustomField>
    <fullName>Billing_Carrier_Route__c</fullName>
    <label>Billing Carrier Route</label>
    <length>50</length>
    <type>Text</type>
</CustomField>