force-app/main/default/objects/Account/fields/Billing_Congressional_Dist__c.field-meta.xml
<CustomField>
    <fullName>Billing_Congressional_Dist__c</fullName>
    <label>Billing Congressional Dist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>