force-app/main/default/objects/Account/fields/Billing_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Billing_Deliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Post office is actively delivering mail to this address</inlineHelpText>
    <label>Billing Deliverable</label>
    <type>Checkbox</type>
</CustomField>