force-app/main/default/objects/Account/fields/Billing_Geo__c.field-meta.xml
<CustomField>
    <fullName>Billing_Geo__c</fullName>
    <label>Billing Geo</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>