force-app/main/default/objects/Account/fields/Billing_Vacant__c.field-meta.xml
<CustomField>
    <fullName>Billing_Vacant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>From the USPS, have delivered mail, but marked vacant after nobody picked up for
a certain amount of days</inlineHelpText>
    <label>Billing Vacant</label>
    <type>Checkbox</type>
</CustomField>