force-app/main/default/objects/Account/fields/CCC_Area__c.field-meta.xml
<CustomField>
    <fullName>CCC_Area__c</fullName>
    <label>CCC Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>East Asia Opportunities    (EAOP)</fullName>
            </value>
            <value>
                <fullName>East Asia Orient  (EAORT)</fullName>
            </value>
            <value>
                <fullName>Eastern Europe &amp; Russia  (EE/R)</fullName>
            </value>
            <value>
                <fullName>Francophone Africa  (FAF)</fullName>
            </value>
            <value>
                <fullName>Latin America &amp; Caribbean  (LA/C)</fullName>
            </value>
            <value>
                <fullName>North Africa, Middle East   (NAME)</fullName>
            </value>
            <value>
                <fullName>North America, Oceania  (NA/O)</fullName>
            </value>
            <value>
                <fullName>Persian,Armenian,Central Asian, Turkic    (PACT)</fullName>
            </value>
            <value>
                <fullName>South Asia  (S.ASIA)</fullName>
            </value>
            <value>
                <fullName>South East Asia  (ASEA)</fullName>
            </value>
            <value>
                <fullName>Southern &amp; Eastern Africa   (SEA)</fullName>
            </value>
            <value>
                <fullName>West Africa  (WA)</fullName>
            </value>
            <value>
                <fullName>Western Europe  (WE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>