force-app/main/default/objects/Account/fields/CCM_Completed__c.field-meta.xml
<CustomField>
    <fullName>CCM_Completed__c</fullName>
    <label>CCM Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCM 1 - DON&apos;T KNOW</fullName>
            </value>
            <value>
                <fullName>CCM 2 - CONTACT INFO</fullName>
            </value>
            <value>
                <fullName>CCM 3 - TIME &amp; EFFORT</fullName>
            </value>
            <value>
                <fullName>CCM 4 - FIRST TRANS</fullName>
            </value>
            <value>
                <fullName>CCM 5 - REPEAT TRANS</fullName>
            </value>
            <value>
                <fullName>CCM 6 - CROSSOVER</fullName>
            </value>
            <value>
                <fullName>CCM 7 - REPEAT CROSSOVER</fullName>
            </value>
            <value>
                <fullName>CCM 8 - ALL THREE TYPES</fullName>
            </value>
            <value>
                <fullName>CCM 9 - PROCLAIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>