force-app/main/default/objects/Account/fields/CCM_Date__c.field-meta.xml
<CustomField>
    <fullName>CCM_Date__c</fullName>
    <label>CCM Date</label>
    <type>Date</type>
</CustomField>