force-app/main/default/objects/Account/fields/CCM_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>CCM_Lapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCM Lapsed</label>
    <type>Checkbox</type>
</CustomField>