force-app/main/default/objects/Account/fields/CCM_To__c.field-meta.xml
<CustomField>
    <fullName>CCM_To__c</fullName>
    <label>CCM To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>