force-app/main/default/objects/Account/fields/Church_Ministries__c.field-meta.xml
<CustomField>
    <fullName>Church_Ministries__c</fullName>
    <label>Church Ministries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marriage Ministry</fullName>
            </value>
            <value>
                <fullName>Men&apos;s Ministry</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Ministry</fullName>
            </value>
            <value>
                <fullName>Military Ministry</fullName>
            </value>
            <value>
                <fullName>Blended Marriage Ministry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>