force-app/main/default/objects/Account/fields/Church_Size__c.field-meta.xml
<CustomField>
    <fullName>Church_Size__c</fullName>
    <label>Church Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-200</fullName>
            </value>
            <value>
                <fullName>201-500</fullName>
            </value>
            <value>
                <fullName>501-750</fullName>
            </value>
            <value>
                <fullName>751-1000</fullName>
            </value>
            <value>
                <fullName>1001-2000</fullName>
            </value>
            <value>
                <fullName>2001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10001</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>