force-app/main/default/objects/Account/fields/Core_Values__c.field-meta.xml
<CustomField>
    <fullName>Core_Values__c</fullName>
    <label>Core Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>