force-app/main/default/objects/Account/fields/Corp_Sponsor_Code__c.field-meta.xml
<CustomField>
    <fullName>Corp_Sponsor_Code__c</fullName>
    <label>Corp Sponsor Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>