force-app/main/default/objects/Account/fields/Corporate_Sponsorship_Rep__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Sponsorship_Rep__c</fullName>
    <label>Corporate Sponsorship Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carol Moore</fullName>
            </value>
            <value>
                <fullName>Glen Fagerstrom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>