force-app/main/default/objects/Account/fields/Country_Development_Phase__c.field-meta.xml
<CustomField>
    <fullName>Country_Development_Phase__c</fullName>
    <description>Used by Global Only for Country Accounts</description>
    <label>Country Development Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Launching</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>Maturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>