force-app/main/default/objects/Account/fields/Country_Director__c.field-meta.xml
<CustomField>
    <fullName>Country_Director__c</fullName>
    <label>Country Director</label>
    <length>100</length>
    <type>Text</type>
</CustomField>