force-app/main/default/objects/Account/fields/Country_Level__c.field-meta.xml
<CustomField>
    <fullName>Country_Level__c</fullName>
    <description>Country Level as assessed by Global Dept</description>
    <inlineHelpText>Use the Global Ministry Classification button above to access Google Sheet Instructions.</inlineHelpText>
    <label>Country Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No Known Presence</fullName>
                <default>true</default>
                <label>0 - No Known Presence</label>
            </value>
            <value>
                <fullName>1 - Presence</fullName>
            </value>
            <value>
                <fullName>2 - Activities</fullName>
            </value>
            <value>
                <fullName>3 - Organized</fullName>
            </value>
            <value>
                <fullName>4 - Expanded</fullName>
            </value>
            <value>
                <fullName>5 - Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>