force-app/main/default/objects/Account/fields/Create_Retention_Call_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Retention_Call_Task__c</fullName>
    <label>Create Retention Call Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>