force-app/main/default/objects/Account/fields/Crisis_Management_Travel_Permission__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Management_Travel_Permission__c</fullName>
    <description>Global Dept Use:  Cru Crisis Management Travel Permission</description>
    <inlineHelpText>Source: Cru Global Crisis Management Country Information sheet</inlineHelpText>
    <label>Crisis Management Travel Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None_Required</fullName>
                <label>None Required</label>
            </value>
            <value>
                <fullName>Inform</fullName>
            </value>
            <value>
                <fullName>Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>