force-app/main/default/objects/Account/fields/Crisis_Management_Visibility_Level__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Management_Visibility_Level__c</fullName>
    <description>Global Dept Use - Cru Global Crisis Management Country Information</description>
    <inlineHelpText>Source: Cru Global Crisis Management Country Information sheet.  Refer to Information Sheet for further definition of restrictions.</inlineHelpText>
    <label>Crisis Management Visibility Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - No Restrictions</fullName>
            </value>
            <value>
                <fullName>2 - Some Restrictions</fullName>
            </value>
            <value>
                <fullName>3 - High Restrictions</fullName>
            </value>
            <value>
                <fullName>4 - Extremely High Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>