force-app/main/default/objects/Account/fields/Cru_PID__c.field-meta.xml
<CustomField>
    <fullName>Cru_PID__c</fullName>
    <description>Formally Cru_PID Field name. Change made to reflect source ID</description>
    <inlineHelpText>Formally CRU PID</inlineHelpText>
    <label>Siebel Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>