force-app/main/default/objects/Account/fields/CS_Welcome_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Welcome_Meeting_Date__c</fullName>
    <label>CS Welcome Meeting Date</label>
    <type>Date</type>
</CustomField>