force-app/main/default/objects/Account/fields/CSP_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>CSP_Activation_Date__c</fullName>
    <description>This field can be populated from an ORG Opportunity when the stage equals 8. Agreement Reached - Closed Won</description>
    <label>CSP Activation Date</label>
    <type>Date</type>
</CustomField>