force-app/main/default/objects/Account/fields/Current_Giving_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Current_Giving_Vehicles__c</fullName>
    <description>Used by Development</description>
    <label>Current Giving Vehicles</label>
    <type>TextArea</type>
</CustomField>