force-app/main/default/objects/Account/fields/Current_Ministry_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_Ministry_Description__c</fullName>
    <description>Used by Global Only Country Account Screen</description>
    <label>Current Ministry Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Customers have purchased FL resources</fullName>
            </value>
            <value>
                <fullName>2. Individuals using FL resources</fullName>
            </value>
            <value>
                <fullName>3. FL radio broadcast from within cntry</fullName>
            </value>
            <value>
                <fullName>4. Organized min development w/ leadrshp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>