force-app/main/default/objects/Account/fields/CV_Master_Account__c.field-meta.xml
<CustomField>
    <fullName>CV_Master_Account__c</fullName>
    <label>CV Master Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>