force-app/main/default/objects/Account/fields/Cvent_Merged__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cvent Merged</label>
    <type>Checkbox</type>
</CustomField>