force-app/main/default/objects/Account/fields/D_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>D_Rep_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On Dennis Shared caseload</description>
    <inlineHelpText>Is this donor on a shared caseload with Dennis Rainey?</inlineHelpText>
    <label>D-Rep 2</label>
    <type>Checkbox</type>
</CustomField>