force-app/main/default/objects/Account/fields/Date_Entered_General_File_Lift_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_General_File_Lift_Program__c</fullName>
    <label>Date Entered General File Lift Program</label>
    <type>Date</type>
</CustomField>