force-app/main/default/objects/Account/fields/Date_Estate_Will_is_Yes__c.field-meta.xml
<CustomField>
    <fullName>Date_Estate_Will_is_Yes__c</fullName>
    <description>The very first date the Estate/Will field was set to Yes on the Account.</description>
    <inlineHelpText>The very first date the Estate/Will field was set to Yes on the Account.</inlineHelpText>
    <label>Date Estate Will Equals Yes</label>
    <type>Date</type>
</CustomField>