force-app/main/default/objects/Account/fields/DD__c.field-meta.xml
<CustomField>
    <fullName>DD__c</fullName>
    <label>DD Family Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>