force-app/main/default/objects/Account/fields/DD_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>DD_Account_Type__c</fullName>
    <label>DD Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>