force-app/main/default/objects/Account/fields/DD_Family_ID__c.field-meta.xml
<CustomField>
    <fullName>DD_Family_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID from DonorDirect</inlineHelpText>
    <label>DD/SE Family ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>