force-app/main/default/objects/Account/fields/Dedupe_notes__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_notes__c</fullName>
    <label>Dedupe notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>