force-app/main/default/objects/Account/fields/Denomination__c.field-meta.xml
<CustomField>
    <fullName>Denomination__c</fullName>
    <label>Denomination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assembly of God</fullName>
            </value>
            <value>
                <fullName>Baptist</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Christian and Missionary Alliance</fullName>
            </value>
            <value>
                <fullName>Christian Reformed</fullName>
            </value>
            <value>
                <fullName>Church of Christ</fullName>
            </value>
            <value>
                <fullName>Church of God</fullName>
            </value>
            <value>
                <fullName>Church of God in Christ</fullName>
            </value>
            <value>
                <fullName>Episcopalian/Anglican</fullName>
            </value>
            <value>
                <fullName>EV Free</fullName>
            </value>
            <value>
                <fullName>FourSquare</fullName>
            </value>
            <value>
                <fullName>Fundamental</fullName>
            </value>
            <value>
                <fullName>Judasim</fullName>
            </value>
            <value>
                <fullName>Lutheran</fullName>
            </value>
            <value>
                <fullName>Methodist/Wesleyan</fullName>
            </value>
            <value>
                <fullName>Nazarene</fullName>
            </value>
            <value>
                <fullName>Non-denominational</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pentecostal</fullName>
            </value>
            <value>
                <fullName>Presbyterian</fullName>
            </value>
            <value>
                <fullName>Seventh Day Adventist</fullName>
            </value>
            <value>
                <fullName>US Military Chapel</fullName>
            </value>
            <value>
                <fullName>Vinyard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>