force-app/main/default/objects/Account/fields/Denomination_Other__c.field-meta.xml
<CustomField>
    <fullName>Denomination_Other__c</fullName>
    <label>Denomination, Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>