force-app/main/default/objects/Account/fields/Do_they_cover_hotel_for_their_staff__c.field-meta.xml
<CustomField>
    <fullName>Do_they_cover_hotel_for_their_staff__c</fullName>
    <label>Do they cover hotel for their staff?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes: 2 nights</fullName>
            </value>
            <value>
                <fullName>Yes: 1 night</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>