force-app/main/default/objects/Account/fields/Donor_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Donor_Case_Status__c</fullName>
    <label>Major Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>