force-app/main/default/objects/Account/fields/Donor_Caseload_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Donor_Caseload_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Caseload</label>
    <referenceTo>Donor_Caseload__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>