force-app/main/default/objects/Account/fields/Donor_Classification_Level__c.field-meta.xml
<CustomField>
    <fullName>Donor_Classification_Level__c</fullName>
    <inlineHelpText>FND:Foundation
GFL: Lifting Program
GV:Giving Vehicle
ML1:High Cap
ML2:Maj Incr
ML3:Steady
ML3A:Top Lift
ML4:500-999/yr
MLHP:ML Heritage Partner
ULHP:UL Heritage Partner
ULQ:UL Qualifier
ULA:50K+
ULB:25-50K
ULC:10-25K
ULD:3-10K
ULP:Prospect
QP: Qualification Process Initiated</inlineHelpText>
    <label>Donor Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FND</fullName>
            </value>
            <value>
                <fullName>GFL</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>Cru</fullName>
            </value>
            <value>
                <fullName>ML1</fullName>
            </value>
            <value>
                <fullName>ML3</fullName>
            </value>
            <value>
                <fullName>ML3A</fullName>
            </value>
            <value>
                <fullName>ML4</fullName>
            </value>
            <value>
                <fullName>ML5</fullName>
            </value>
            <value>
                <fullName>ULP</fullName>
            </value>
            <value>
                <fullName>ULQ</fullName>
            </value>
            <value>
                <fullName>ULA</fullName>
            </value>
            <value>
                <fullName>ULB</fullName>
            </value>
            <value>
                <fullName>ULC</fullName>
            </value>
            <value>
                <fullName>ULD</fullName>
            </value>
            <value>
                <fullName>MLHP</fullName>
            </value>
            <value>
                <fullName>ULHP</fullName>
            </value>
            <value>
                <fullName>QP</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
            <value>
                <fullName>CL1</fullName>
                <isActive>false</isActive>
                <label>CL1</label>
            </value>
            <value>
                <fullName>CL2</fullName>
                <isActive>false</isActive>
                <label>CL2</label>
            </value>
            <value>
                <fullName>CL3</fullName>
                <isActive>false</isActive>
                <label>CL3</label>
            </value>
            <value>
                <fullName>CL4</fullName>
                <isActive>false</isActive>
                <label>CL4</label>
            </value>
            <value>
                <fullName>CL5</fullName>
                <isActive>false</isActive>
                <label>CL5</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <isActive>false</isActive>
                <label>INFO</label>
            </value>
            <value>
                <fullName>MDCS</fullName>
                <isActive>false</isActive>
                <label>MDCS</label>
            </value>
            <value>
                <fullName>ML1A</fullName>
                <isActive>false</isActive>
                <label>ML1A</label>
            </value>
            <value>
                <fullName>ML1AB</fullName>
                <isActive>false</isActive>
                <label>ML1AB</label>
            </value>
            <value>
                <fullName>ML1B</fullName>
                <isActive>false</isActive>
                <label>ML1B</label>
            </value>
            <value>
                <fullName>ML1C</fullName>
                <isActive>false</isActive>
                <label>ML1C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>