force-app/main/default/objects/Account/fields/Donor_Conf_Certs__c.field-meta.xml
<CustomField>
    <fullName>Donor_Conf_Certs__c</fullName>
    <inlineHelpText>Development mail code for annual WTR certificates.</inlineHelpText>
    <label>Donor Conf Certs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>