force-app/main/default/objects/Account/fields/Donor_Confidential_Notes__c.field-meta.xml
<CustomField>
    <fullName>Donor_Confidential_Notes__c</fullName>
    <inlineHelpText>Donor team confidential notes about the Account.</inlineHelpText>
    <label>Donor Confidential Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>